# ml-plataform

./: Makefile  README.md  architecture.drawio  pyproject.toml
data_warehouse/: README.md  data_warehouse.py
development_env/experiment_0000000000/: test_plataform.ipynb  training_model.ipynb
mini_monolithic_ml_platform_env/: pyvenv.cfg
model_logging/: README.md  log_inference_api.py
model_registry/: README.md  model_registry.py
model_registry/artifacts/test_iris_rf/: metadata.json  model.pkl
model_serving/: README.md  __init__.py  model_repository.py  model_serving.py
model_serving/api/: api_server.py  inference.py
model_serving/api/schemas/: schemas.py
